WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139193
Should use standardQuickLookMenuItem for apps that don't implement customizations
https://bugs.webkit.org/show_bug.cgi?id=139193
Summary
Should use standardQuickLookMenuItem for apps that don't implement customizat...
Beth Dakin
Reported
2014-12-02 12:23:10 PST
Should use standardQuickLookMenuItem for apps that don't implement customizations
rdar://problem/18944696
Attachments
Patch
(21.61 KB, patch)
2014-12-02 12:28 PST
,
Beth Dakin
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-12-02 12:28:41 PST
Created
attachment 242440
[details]
Patch
WebKit Commit Bot
Comment 2
2014-12-02 12:30:19 PST
Attachment 242440
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/spi/mac/QuickLookMacSPI.h:50: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/WebCore/platform/spi/mac/QuickLookMacSPI.h:51: Tab found; better to use spaces [whitespace/tab] [1] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 3
2014-12-02 12:36:09 PST
Thank you!
http://trac.webkit.org/changeset/176684
Chris Dumez
Comment 4
2014-12-02 20:31:49 PST
I am getting build errors after this patch (despite the recent build fixes): Source/WebKit/mac/WebView/WebActionMenuController.mm:80:40: error: cannot find protocol declaration for 'QLPreviewMenuItemDelegate'; did you mean 'QLPreviewPanelDelegate'? @interface WebActionMenuController () <QLPreviewMenuItemDelegate> ^~~~~~~~~~~~~~~~~~~~~~~~~ QLPreviewPanelDelegate Source/WebKit/mac/WebView/WebActionMenuController.mm:290:28: error: 'QLPreviewMenuItem' may not respond to 'setDelegate:' [-Werror] [qlPreviewLinkItem setDelegate:self]; ~~~~~~~~~~~~~~~~~ ^ Source/WebKit/mac/WebView/WebActionMenuController.mm:290:40: error: cannot initialize a parameter of type 'id<NSFileManagerDelegate>' with an lvalue of type 'WebActionMenuController *' [qlPreviewLinkItem setDelegate:self]; ^~~~ ^ 3 errors generated.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug