Source/WebKit2/UIProcess/API/Cocoa/WKViewPrivate.h
@@ -127,6 +127,7 @@
 - (void)_setPreviewTitle:(NSString *)previewTitle;
 - (void)_finishPreviewingURL:(NSURL *)url withPreviewView:(NSView *)previewView;
 - (void)_handleClickInPreviewView:(NSView *)previewView URL:(NSURL *)url;
+- (BOOL)_shouldUseStandardQuickLookPreview;
 
 - (void)_dismissActionMenuPopovers;
 #endif
